# Sourcetrail

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS.txt  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPPLINT.cfg  DOCUMENTATION.md  README.md  TODO.md  conanfile.txt  vcpkg.json
src/app/: CMakeLists.txt  main.cpp
src/console/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/docs/: config_manager.puml
src/core/st/views/: zip.hpp
src/core/tests/: CMakeLists.txt  ConfigManagerTestSuite.cpp  FileManagerTestSuite.cpp  FilePathFilterTestSuite.cpp  FilePathTestSuite.cpp  FileSystemTestSuite.cpp  LoggerTestSuite.cpp  ScopedFunctorTestSuite.cpp  ScopedTemporaryFileTestSuite.cpp  TextAccessTestSuite.cpp  VersionTestSuite.cpp
src/core/utility/: ConfigManager.cpp  ConfigManager.hpp
src/indexer/: CMakeLists.txt  main.cpp
src/lib/tests/: ActivationControllerTestSuite.cpp  ApplicationTestSuite.cpp  BookmarkControllerTestSuite.cpp  CMakeLists.txt  CommandLineParserTestSuite.cpp  CommandlineCommandConfigTestSuite.cpp  CommandlineCommandIndexTestSuite.cpp  CommandlineCommandTestSuite.cpp  CommandlineHelperTestSuite.cpp  ComponentFactoryTestSuite.cpp  ComponentManagerTestSuite.cpp  ComponentTestSuite.cpp  ConsoleControllerTestSuite.cpp  FactoryTestSuite.cpp  FileHandlerTestSuite.cpp  FindCommandTestSuite.cpp  GraphViewStyleTestSuite.cpp  IntermediateStorageTestSuite.cpp  LanguagePackageManagerTestSuite.cpp  LocationTypeTestSuite.cpp  ProjectTestSuite.cpp  SingleValueCacheTestSuite.cpp  SourceLocationCollectionTestSuite.cpp  SourceLocationFileTestSuite.cpp  SourceLocationTestSuite.cpp  StatusBarControllerTestSuite.cpp  StatusControllerTestSuite.cpp  StatusTestSuite.cpp  TabIdTestSuite.cpp  TabTestSuite.cpp  TimeStampTestSuite.cpp  TreeTestSuite.cpp  UnorderedCacheTestSuite.cpp
src/lib/tests/mocks/: CMakeLists.txt  MockStorageAccess.hpp  MockedApplicationSetting.hpp  MockedBookmarkButtonsView.hpp  MockedBookmarkView.hpp  MockedCodeView.hpp  MockedCommandlineCommand.hpp  MockedCompositeView.hpp  MockedDialogView.hpp  MockedFactory.hpp  MockedGraphView.hpp  MockedIndexer.hpp  MockedLogger.hpp  MockedMessageQueue.hpp  MockedProject.hpp  MockedProjectSettings.hpp  MockedRefreshView.hpp  (+13 more)
src/lib_cxx/: CMakeLists.txt  LanguagePackageCxx.h
src/lib_cxx/project/: SourceGroupCxxCdb.cpp  SourceGroupCxxCdb.h  SourceGroupCxxCodeblocks.cpp  SourceGroupCxxCodeblocks.h  SourceGroupCxxEmpty.cpp  SourceGroupCxxEmpty.h  SourceGroupFactoryModuleCxx.cpp  SourceGroupFactoryModuleCxx.h  utilitySourceGroupCxx.cpp  utilitySourceGroupCxx.h
src/lib_cxx/tests/: CMakeLists.txt  CompilationDatabaseTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp  IncludeDirectiveTestSuite.cpp
src/lib_cxx/utility/: CompilationDatabase.cpp  CompilationDatabase.h  IncludeDirective.cpp  IncludeDirective.h  IncludeProcessing.cpp  IncludeProcessing.h
src/lib_gui/tests/: CMakeLists.txt  QtConsoleViewTestSuite.cpp  QtContextMenuTestSuite.cpp  QtNetworkFactoryTestSuite.cpp  QtSelfRefreshIconButtonTestSuite.cpp  globalStringsTestSuite.cpp  utilityAppTestSuite.cpp
src/lib_utility/: CMakeLists.txt
src/lib_utility/tests/: CMakeLists.txt  UtilityStringTestSuite.cpp
src/lib_utility/utility/: TextCodec.cpp  TextCodec.h  utilityString.cpp  utilityString.h
src/messaging/: CMakeLists.txt  Message.h  MessageFilter.h  MessageListenerBase.cpp  MessageListenerBase.h  MessageQueue.cpp  MessageQueue.h
src/messaging/filter_types/: MessageFilterErrorCountUpdate.h  MessageFilterFocusInOut.h  MessageFilterSearchAutocomplete.h
src/messaging/tests/: CMakeLists.txt  MessageQueueTestSuite.cpp
src/messaging/type/: MessageActivateWindow.h  MessageFlushUpdates.h  MessageLogFilterChanged.h  MessageProjectEdit.h  MessageProjectNew.h  MessageRefresh.h  MessageRefreshUI.h  MessageRefreshUIState.h  MessageShowStatus.h  MessageStatus.h  MessageStatusFilterChanged.h  MessageTooltipShow.h  MessageWindowChanged.h  MessageWindowFocus.h
src/scheduling/: CMakeLists.txt  ITaskManager.cpp  ITaskManager.hpp  Task.cpp  Task.h  TaskDecoratorRepeat.h  TaskGroup.cpp  TaskGroup.h  TaskGroupParallel.cpp  TaskGroupSequence.h  TaskRunner.cpp  TaskScheduler.cpp  TaskScheduler.h  TaskSetValue.h
src/scheduling/impls/: TaskManager.cpp  TaskManager.hpp
src/scheduling/mocks/: CMakeLists.txt  MockedTaskManager.hpp
src/scheduling/tests/: CMakeLists.txt  TaskManagerTestSuite.cpp  TaskSchedulerTestSuite.cpp
src/test/: AppPathTestSuite.cpp  CMakeLists.txt  CommandlineTestSuite.cpp  ConfigManagerTestSuite.cpp  CxxIncludeProcessingTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp  FileManagerTestSuite.cpp  FilePathFilterTestSuite.cpp  FilePathTestSuite.cpp  FileSystemTestSuite.cpp  GraphTestSuite.cpp  HierarchyCacheTestSuite.cpp  IndexerCompositeTestSuite.cpp  LogManagerTestSuite.cpp  LowMemoryStringMapTestSuite.cpp  MatrixBaseTestSuite.cpp  MatrixDynamicBaseTestSuite.cpp  MessageQueueTestSuite.cpp  NetworkProtocolHelperTestSuite.cpp  ProjectSettingsTestSuite.cpp  RefreshInfoGeneratorTestSuite.cpp  ResourcePathsTestSuite.cpp  SearchIndexTestSuite.cpp  SettingsMigratorTestSuite.cpp  SettingsTestSuite.cpp  SharedMemoryTestSuite.cpp  SourceGroupTestSuite.cpp  SourceLocationCollectionTestSuite.cpp  SqliteIndexStorageTestSuite.cpp  StorageTestSuite.cpp  TextAccessTestSuite.cpp  UserPathsTestSuite.cpp  UtilityGradleTestSuite.cpp  UtilityMavenTestSuite.cpp  UtilityStringTestSuite.cpp  UtilityTestSuite.cpp  Vector2TestSuite.cpp  Vector4TestSuite.cpp  test_main.cpp
src/test/helper/: TestFileRegister.cpp  TestFileRegister.h  TestStorage.h
tests/integration/lib/: CMakeLists.txt  RefreshInfoGeneratorTestSuite.cpp  SharedMemoryGarbageCollectorTestSuite.cpp  SourceGroupTestSuite.cpp  SqliteBookmarkStorageTestSuite.cpp  SqliteIndexStorageTestSuite.cpp  StorageTestSuite.cpp
tests/integration/lib_cxx/: CMakeLists.txt  CxxIncludeProcessingTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp
tests/integration/messaging/: CMakeLists.txt  MessageQueueTestSuite.cpp
(+1093 files in other folders)
